--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id "java"
 	id "eclipse"
-	id "us.kirchmeier.capsule" version "0.10.0"
+	id "application"
 	id "nebula.info" version "2.2.0"
 	id "nebula.os-package" version "2.2.0"
 }
@@ -18,23 +18,13 @@ sourceCompatibility = targetCompatibility = 1.8
 
 tasks.withType(AbstractCompile)*.options*.encoding = "UTF-8"
 
-test { systemProperty("java.awt.headless", "true") }
+configurations { agent }
 
 dependencies {
 	compile 'ninja.siden:siden-core:0.4.0'
-	runtime 'org.jolokia:jolokia-jvm:1.2.3:agent'
+	agent('org.jolokia:jolokia-jvm:1.2.3:agent') { transitive = false }
 	testCompile 'org.jmockit:jmockit:1.+'
 	testCompile 'junit:junit:4.+'
-}
-
-task stage(type: FatCapsule, dependsOn: 'clean') {
-	applicationClass "ninja.siden.sirusi.Sirusi"
-	reallyExecutable
-	capsuleManifest {
-		systemProperties = ['java.awt.headless': true]
-		environmentVariables = [SIDEN_ENV:'production']
-		javaAgents  << "org.jolokia:jolokia-jvm:1.2.3:agent=a,port=7777,host=localhost"
-	}
 }
 
 eclipse {
@@ -44,3 +34,45 @@ eclipse {
 		]
 	}
 }
+
+mainClassName = "ninja.siden.sirusi.Sirusi"
+applicationDefaultJvmArgs = [
+	"-javaagent:\$APP_HOME/lib/${configurations.agent.iterator().next().name}"
+]
+applicationDistribution.from(configurations.agent) { into "lib" }
+startScripts {
+	doLast {
+		unixScript.text = unixScript.text.replace('\\$APP_HOME', '\$APP_HOME')
+		windowsScript.text = windowsScript.text.replace('$APP_HOME/lib/', '%APP_HOME%\\lib\\')
+	}
+}
+
+ospackage {
+	user = 'sirusi'
+	permissionGroup = 'sirusi'
+	packageDescription = 'avatar server'
+	user= 'taichi'
+	packager= 'taichi'
+	url='https://github.com/taichi/sirusi'
+
+	preInstall    file('src/pkg/scripts/preinst')
+	postInstall   file('src/pkg/scripts/postinst')
+	preUninstall  file('src/pkg/scripts/prerm')
+
+	into '/opt/sirusi'
+
+	from(jar.outputs.files) { into 'lib' }
+	from(startScripts.outputDir) {
+		into 'bin'
+		fileMode = 0550
+	}
+	from(configurations.runtime) { into 'lib' }
+	from(configurations.agent) { into 'lib' }
+	
+	buildDeb {
+		from('src/pkg/ubuntu/sirusi.conf') { into '/etc/init' }
+	}
+	// TODO Systemd
+}
+
+[buildDeb, buildRpm].each { it.dependsOn startScripts }
