remove unused codes.

--- a/src/pkg/ubuntu/sirusi.conf
+++ b/src/pkg/ubuntu/sirusi.conf
@@ -10,11 +10,6 @@ setuid sirusi
 setgid sirusi
 
 console log
+env SIDEN_ENV=production
 
-script
-
-  PATH=/bin:/usr/bin
-  SIRUSI_LOG_FILE="/var/log/sirusi/sirusi.log"
-
-  exec /opt/sirusi/bin/sirusi
-end script
+exec /opt/sirusi/bin/sirusi
